feat: starter websocket implementation

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tsconfig/strictest": "^2.0.7",
     "@types/node": "^24.10.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/parser": "^8.46.3",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
@@ -39,6 +40,7 @@
   },
   "packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34",
   "dependencies": {
-    "@fontsource-variable/outfit": "^5.2.8"
+    "@fontsource-variable/outfit": "^5.2.8",
+    "ws": "^8.18.3"
   }
 }
